--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style-type: none;
+    text-decoration: none;
+    color: black;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap');
@@ -13,5 +16,47 @@
     --cadre-txt:#1E3D59;
     /* Font */
     --nav-bar: 'Nunito', sans-serif;
-    --font-txt: 'Robot', sans-serif;
+    --font-txt: 'Roboto', sans-serif;
 }
+
+body{
+    background-color: red;
+}
+nav{
+    margin: 20px;
+}
+header{
+    background-color: green;
+}
+
+.dark-mode{
+    background-color: black;
+    width: 90px;
+    height: 30px;
+    border-radius: 30px;
+}
+
+.switch{
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    border: none;
+}
+
+ul {
+    background-color: blue;
+    text-align: center;
+    font-family: var(--font-txt);
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+ul li{
+    margin: 20px;    
+}
+
+ul li a{
+    color: white;
+}
+
