add shadow and margin in div

--- a/style.css
+++ b/style.css
@@ -64,24 +64,28 @@ ul li{
 ul li a{
     color: white;
 }
+
 section{
     display: flex;
     flex-direction: column;
     margin: 5%;
 }
+
 section div{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 section div p{
-    border: 10px solid var(--cadre-txt);
+    border: 20px solid var(--cadre-txt);
     border-radius: 16px;
     color: white;
     background-color: var(--cadre-txt);
+    margin: 5%;
 }
 
 section div img{
     border-radius: 20px;
-    width: 80%;
+    width: 90%;
+    box-shadow: 5px 5px 5px 5px #B0B0B0;
 }
