--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap');
+@import url('https://css.gg/css?=|facebook');
+
 
 :root{
     /* Color */
