--- a/style.css
+++ b/style.css
@@ -22,8 +22,6 @@
     --font-txt: 'Roboto', sans-serif;
 }
 
-body{
-}
 nav{
     margin: 20px;
 }
@@ -70,6 +68,7 @@ ul li a{
 
 h1{
     color: white;
+    border-radius: 20px;
     font-size: 50px;
     font-family: var(--nav-bar);
     text-transform: uppercase;
@@ -120,5 +119,30 @@ footer div i{
     color: var(--logo);
 }
 
+.main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.first-container{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
 
 
+.second-container{
+
+}
+
+
+
+h2{
+    background-color: blue;
+    font-size: 40px;
+    width: 80vw;
+    height: 20vh;
+    text-transform: uppercase;
+    border-radius: 30px;
+}
