--- a/style.css
+++ b/style.css
@@ -131,7 +131,14 @@ h1{
 .flex-container div img{
     border-radius: 20px;
     width: 90%;
+}
+
+.img-shadow{
     box-shadow: 5px 5px 5px 5px #B0B0B0;
+}
+
+.img-shadow-change{
+    box-shadow: none;
 }
 
 footer{
