--- a/style.css
+++ b/style.css
@@ -20,11 +20,13 @@
     /* Font */
     --nav-bar: 'Nunito', sans-serif;
     --font-txt: 'Roboto', sans-serif;
+    /* transition */
+    --dark-mode: 0.7s;
 }
 
 body{
     background-color: var(--bg-color);
-    transition: 0.7s;
+    transition: var(--dark-mode);
 }
 
 .body-change{
@@ -47,7 +49,6 @@ header{
     background-color: black;
     display: flex;
     width: 90px;
-    position: relative;
     height: 30px;
     border-radius: 30px;
     cursor: pointer;
@@ -58,9 +59,8 @@ header{
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    /* position: absolute; */
     border: none;
-    transition: transform 0.7s;
+    transition: transform var(--dark-mode);
 }
 
 .btn-change{
@@ -135,7 +135,7 @@ h1{
 
 .img-shadow{
     box-shadow: 5px 5px 5px 5px #B0B0B0;
-    transition: 0.7s;
+    transition: var(--dark-mode);
 }
 
 .img-shadow-change{
