--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ header{
 .dark-mode{
     background-color: black;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 90px;
     height: 30px;
     border-radius: 30px;
@@ -60,6 +62,7 @@ header{
     height: 30px;
     border-radius: 50%;
     border: none;
+    position: relative;
     transition: transform var(--dark-mode);
 }
 
@@ -67,19 +70,33 @@ header{
     transform: translateX(60px);
 }
 
-/* moon position */
+/* icone position maybe later */
 
-/* .dark-mode i{
-    position: absolute;
+.dark-mode i{
     color : #ffd363;
-    top: 6px;
-    right: 23px;
+    transition: opacity calc(var(--dark-mode) + 1s);
+
 }
 
-.icone-change{
-    left : 20px;
-} */
+.fa-moon{
+    position: absolute;
+    margin-left: 72px;
 
+}
+
+.fa-moon-change{
+    opacity: 0%;
+}
+
+.fa-sun{
+    opacity: 0%;
+    position: absolute;
+    margin-left: 8px;
+}
+
+.fa-sun-change{
+    opacity: 100%;
+}
 
 ul {
     /* background-color: blue; */
