add fontawesome in activites

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     /* Font */
     --nav-bar: 'Nunito', sans-serif;
     --font-txt: 'Roboto', sans-serif;
-    /* transition */
+    /* Transition */
     --dark-mode: 0.7s;
 }
 
