--- a/style.css
+++ b/style.css
@@ -126,6 +126,13 @@ h1{
     text-align: center;
 }
 
+.title-background{
+    background-color: rgba(97,172,207,0.7);
+    margin: 10px;
+    font-size: 40px;
+    padding: 20px 10px;
+}
+
 .flex-container{
     display: flex;
     flex-direction: column;
