--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h1{
     flex-direction: column;
     align-items: center;
 }
-.flex-container div p{
+.paragraphe{
     border: 20px solid var(--cadre-txt);
     border-radius: 16px;
     color: white;
@@ -186,27 +186,30 @@ footer div i{
 .main-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
 
 .first-container{
     display: flex;
     flex-direction: column;
-    text-align: center;
+    
 }
-
 
 .second-container{
 
 }
 
-
-
 h2{
-    background-color: blue;
+    background-color: var(--logo);
     font-size: 40px;
-    width: 80vw;
+    margin: 10%;
     height: 20vh;
     text-transform: uppercase;
     border-radius: 30px;
+}
+
+.first-container div img{
+    border-radius: 20px;
+    width: 75%;
+    height: 40vh;
 }
