add body opacity

--- a/style.css
+++ b/style.css
@@ -288,8 +288,8 @@ h3{
 }
 
 
-.coucou{
-    background-color: blue;
+.paragraphe-txt{
+    /* background-color: blue; */
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -297,8 +297,15 @@ h3{
 }
 
 .appear{
-    background-color: red;
+    /* background-color: red; */
     overflow: visible;
     text-overflow: clip;
     white-space: normal;
+    transition: 2s;
+    z-index: 4;
 }
+.appear-body{
+    background-color: rgba(155, 155, 155, 155);
+    opacity: 60%;
+}
+:not(appear-body)
