--- a/style.css
+++ b/style.css
@@ -1,356 +1,343 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-    text-decoration: none;
-    color: black;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  color: black;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap');
-@import url('https://css.gg/css?=|facebook');
+@import url("https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap");
+@import url("https://css.gg/css?=|facebook");
 
-
-:root{
-    /* Color */
-    --bg-color:#F1F1F1;
-    --title1:#61ACCF;
-    --cadre-txt:#1E3D59;
-    --logo:#CD4669;
-    /* Font */
-    --nav-bar: 'Nunito', sans-serif;
-    --font-txt: 'Roboto', sans-serif;
-    /* Transition */
-    --dark-mode: 0.7s;
+:root {
+  /* Color */
+  --bg-color: #f1f1f1;
+  --title1: #61accf;
+  --cadre-txt: #1e3d59;
+  --logo: #cd4669;
+  /* Font */
+  --nav-bar: "Nunito", sans-serif;
+  --font-txt: "Roboto", sans-serif;
+  /* Transition */
+  --dark-mode: 0.7s;
 }
 
-body{
-    background-color: var(--bg-color);
-    transition: var(--dark-mode);
-    z-index: 1;
+body {
+  background-color: var(--bg-color);
+  transition: var(--dark-mode);
+  z-index: 1;
 }
 
-.body-change{
-    background-color: black;
+.body-change {
+  background-color: black;
 }
 
-
-
-header{
-    background-image: url(assets/accueil.jpeg) ;
-    background-size: cover ;
-    padding-top: 20px;
-    height: 60vh;
+header {
+  background-image: url(assets/accueil.jpeg);
+  background-size: cover;
+  padding-top: 20px;
+  height: 60vh;
 }
 
-img{
-    margin-top: 10%;
+img {
+  margin-top: 10%;
 }
 
-.dark-mode{
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90px;
-    height: 30px;
-    border-radius: 30px;
-    cursor: pointer;
+.dark-mode {
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90px;
+  height: 30px;
+  border-radius: 30px;
+  cursor: pointer;
 }
 
-.btn{
-    background-color: white;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: none;
-    position: relative;
-    transition: transform var(--dark-mode);
+.btn {
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  position: relative;
+  transition: transform var(--dark-mode);
 }
 
-.btn-change{
-    transform: translateX(60px);
+.btn-change {
+  transform: translateX(60px);
 }
 
-.dark-mode i{
-    color : #ffd363;
-    transition: opacity calc(var(--dark-mode) + 1s);
-
+.dark-mode i {
+  color: #ffd363;
+  transition: opacity calc(var(--dark-mode) + 1s);
 }
 
-.fa-moon{
-    position: absolute;
-    margin-left: 65px;
-
+.fa-moon {
+  position: absolute;
+  margin-left: 65px;
 }
 
-.fa-moon-change{
-    opacity: 0%;
+.fa-moon-change {
+  opacity: 0%;
 }
 
-.fa-sun{
-    opacity: 0%;
-    position: absolute;
-    margin-left: 8px;
+.fa-sun {
+  opacity: 0%;
+  position: absolute;
+  margin-left: 8px;
 }
 
-.fa-sun-change{
-    opacity: 100%;
+.fa-sun-change {
+  opacity: 100%;
 }
 
-nav{
-    margin: 20px;
+nav {
+  margin: 20px;
 }
 
 ul {
-    /* background-color: blue; */
-    text-align: center;
-    font-family: var(--font-txt);
-    font-size: 20px;
-    text-transform: uppercase;
-    /* display: none; */
+  /* background-color: blue; */
+  text-align: center;
+  font-family: var(--font-txt);
+  font-size: 20px;
+  text-transform: uppercase;
+  /* display: none; */
 }
 
-ul li{
-    margin: 20px;    
+ul li {
+  margin: 20px;
 }
 
-ul li a{
-    color: white;
+ul li a {
+  color: white;
 }
 
-h1{
-    color: white;
-    border-radius: 20px;
-    font-size: 50px;
-    font-family: var(--nav-bar);
-    text-transform: uppercase;
-    display: flex;
-    justify-content: center;
-    text-align: center;
+h1 {
+  color: white;
+  border-radius: 20px;
+  font-size: 50px;
+  font-family: var(--nav-bar);
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
-.title-background{
-    background-color: rgba(97,172,207,0.7);
-    margin: 10px;
-    font-size: 40px;
-    padding: 20px 10px;
+.title-background {
+  background-color: rgba(97, 172, 207, 0.7);
+  margin: 10px;
+  font-size: 40px;
+  padding: 20px 10px;
 }
 
-.flex-container{
-    display: flex;
-    flex-direction: column;
-    margin: 5%;
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  margin: 5%;
 }
 
-.flex-container div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.flex-container div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.paragraphe{
-    border: 20px solid var(--cadre-txt);
-    border-radius: 16px;
-    color: white;
-    background-color: var(--cadre-txt);
-    margin: 5%;
+
+.paragraphe {
+  border: 20px solid var(--cadre-txt);
+  border-radius: 16px;
+  color: white;
+  background-color: var(--cadre-txt);
+  margin: 5%;
 }
 
 .paragraphe h3,
 .paragraphe p,
 .paragraphe-hidden h3,
 .paragraphe-hidden p,
-.paragraphe a{
-    color: white;
+.paragraphe a {
+  color: white;
 }
 
-.flex-container div img{
-    border-radius: 20px;
-    width: 90%;
+.flex-container div img {
+  border-radius: 20px;
+  width: 90%;
 }
 
-.img-shadow{
-    box-shadow: 5px 5px 5px 5px #B0B0B0;
-    transition: var(--dark-mode);
+.img-shadow {
+  box-shadow: 5px 5px 5px 5px #b0b0b0;
+  transition: var(--dark-mode);
 }
 
-.img-shadow-change{
-    box-shadow: none;
+.img-shadow-change {
+  box-shadow: none;
 }
 
-footer{
-    background-color: var(--cadre-txt);
+footer {
+  background-color: var(--cadre-txt);
 }
 
-footer div{
-    display: flex;
-    justify-content: space-around;
+footer div {
+  display: flex;
+  justify-content: space-around;
 }
 
-footer div i{
-    cursor: pointer;
-    padding: 3%;
+footer div i {
+  cursor: pointer;
+  padding: 3%;
 }
 
-.fa-brands{
-    color: var(--logo);
+.fa-brands {
+  color: var(--logo);
 }
-
 
 /*********************************************Activités***********************************/
 
-
-.main-container{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .first-container,
-.second-container{
-    display: flex;
-    flex-direction: column;
+.second-container {
+  display: flex;
+  flex-direction: column;
 }
 
-h2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-transform: uppercase;
-    background-color: var(--logo);
-    font-size: 40px;
-    margin: 10%;
-    height: 20vh;
-    border-radius: 30px;
+h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  background-color: var(--logo);
+  font-size: 40px;
+  margin: 10%;
+  height: 20vh;
+  border-radius: 30px;
 }
 
 .first-container div img,
-.second-container div img{
-    border-radius: 20px;
-    width: 75%;
-    height: 30vh;
+.second-container div img {
+  border-radius: 20px;
+  width: 75%;
+  height: 30vh;
 }
-
-
 
 /*********************************************Infos utiles***********************************/
 
-
-.contain-info{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.contain-info {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .contain-first-info,
-.contain-second-info{
-    display: flex;
-    flex-direction: column;
+.contain-second-info {
+  display: flex;
+  flex-direction: column;
 }
 
 .countain-first-info div,
-.contain-second-info div{
-    display: flex;
-    flex-direction: column;
+.contain-second-info div {
+  display: flex;
+  flex-direction: column;
 }
 
-.contain-first-info div img{
-    border-radius: 20px;
-    width: 75%;
-    height: 30vh;
+.contain-first-info div img {
+  border-radius: 20px;
+  width: 75%;
+  height: 30vh;
 }
 
-.contain-second-info iframe{
-    border-radius: 20px;
-    width: 100%;
-    height: 30vh;
-
+.contain-second-info iframe {
+  border-radius: 20px;
+  width: 100%;
+  height: 30vh;
 }
 
-.contain-second-info{
-    display: flex;
-    align-items: center;
-    margin: 40px;
+.contain-second-info {
+  display: flex;
+  align-items: center;
+  margin: 40px;
 }
 
-.paragraphe-hidden{
-    border: 20px solid var(--cadre-txt);
-    border-radius: 16px;
-    color: rgb(255, 255, 255);
-    background-color: var(--cadre-txt);
-    margin: 5%;
-    cursor: pointer;
+.paragraphe-hidden {
+  border: 20px solid var(--cadre-txt);
+  border-radius: 16px;
+  color: rgb(255, 255, 255);
+  background-color: var(--cadre-txt);
+  margin: 5%;
+  cursor: pointer;
 }
 
-h3{
-    text-transform: uppercase;
-    font-size: 20px;
-    height: 10vh;
-    border-radius: 30px;
+h3 {
+  text-transform: uppercase;
+  font-size: 20px;
+  height: 10vh;
+  border-radius: 30px;
 }
 
-
-.paragraphe-txt{
-    /* background-color: blue; */
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    transition: 2s;
-
+.paragraphe-txt {
+  /* background-color: blue; */
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: 2s;
 }
 
-.appear{
-    /* background-color: red; */
-    overflow: visible;
-    text-overflow: clip;
-    white-space: normal;
-    transition: 2s;
-    z-index: 4;
+.appear {
+  /* background-color: red; */
+  overflow: visible;
+  text-overflow: clip;
+  white-space: normal;
+  transition: 2s;
+  z-index: 4;
 }
-.appear-body{
-    background-color: rgba(155, 155, 155, 155);
-    background-color: red;
-    backdrop-filter: blur(100%);
-    backdrop-filter: opacity(100%);
-    z-index: 1;
-    opacity: 30%;    
-} 
+
+.appear-body {
+  background-color: rgba(155, 155, 155, 155);
+  background-color: red;
+  backdrop-filter: blur(100%);
+  backdrop-filter: opacity(100%);
+  z-index: 1;
+  opacity: 30%;
+}
 
 /**************************************Aux alentours*********************************************/
 
-.main-alentours{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.main-alentours {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
-.main-alentours div img{
-    border-radius: 20px;
-    width: 75%;
-    height: 30vh;
+.main-alentours div img {
+  border-radius: 20px;
+  width: 75%;
+  height: 30vh;
 }
 
-.main-alentours p{
-    text-transform: uppercase;
-    cursor: pointer;
+.main-alentours p {
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
-
-
-.container-alentours{
-    display: flex;
-    flex-direction: column;
+.container-alentours {
+  display: flex;
+  flex-direction: column;
 }
 
-.container-alentours div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.container-alentours div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.container-alentours img{
-    border-radius: 20px;
-    width: 75%;
-    height: 40vh;
+.container-alentours img {
+  border-radius: 20px;
+  width: 75%;
+  height: 40vh;
 }
