--- a/style.css
+++ b/style.css
@@ -93,18 +93,80 @@ img {
   opacity: 100%;
 }
 
+
 nav {
-  margin: 20px;
+  margin: 20px 0;
+  
 }
 
-ul {
-  /* background-color: blue; */
+.top-div{
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-toggler{
+  position: fixed;
+  top: 30px;
+  right: 50px; 
+  height: 50px;
+  z-index:2;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+}
+
+.line{
+  display: block;
+  position: absolute;
+  width: 100%;
+  height : 2px;
+  background-color: #f1f1f1;
+  transition : transform 0.3s ease-out, opacity 0.1s ease-out;
+
+}
+
+.l1{
+  transform: translateY(-10px);
+}
+.l3{
+  transform: translateY(10px);
+}
+
+.nav-toggler.active .l1{
+  transform: translateY(0px) rotate(135deg);
+}
+.nav-toggler.active .l2{
+  opacity: 0;
+}
+.nav-toggler.active .l3{
+  transform: translateY(0px) rotate(-135deg);
+}
+
+
+.nav-bar-mobil {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  min-height: 70vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-family: var(--font-txt);
   font-size: 20px;
   text-transform: uppercase;
-  /* display: none; */
+  position: fixed;
+  transform: translateY(-120%);
+  transition : transform 0.3s ease-in-out;
 }
+/* cubic-bezier(0.73, 0.11, 0.67, 0.84) */
+.nav-bar-mobil.active{
+  transform : translateY(-26%);
+}
+
 
 ul li {
   margin: 20px;
