--- a/style.css
+++ b/style.css
@@ -93,23 +93,21 @@ img {
   opacity: 100%;
 }
 
-
 nav {
   margin: 20px 0;
-  
 }
 
-.top-div{
+.top-div {
   display: flex;
   justify-content: space-between;
 }
 
-.nav-toggler{
+.nav-toggler {
   position: fixed;
   top: 30px;
-  right: 50px; 
+  right: 50px;
   height: 50px;
-  z-index:2;
+  z-index: 2;
   display: block;
   justify-content: center;
   align-items: center;
@@ -119,33 +117,31 @@ nav {
   background: transparent;
 }
 
-.line{
+.line {
   display: block;
   position: absolute;
   width: 100%;
-  height : 2px;
+  height: 2px;
   background-color: #f1f1f1;
-  transition : transform 0.3s ease-out, opacity 0.1s ease-out;
-
+  transition: transform 0.3s ease-out, opacity 0.1s ease-out;
 }
 
-.l1{
+.l1 {
   transform: translateY(-10px);
 }
-.l3{
+.l3 {
   transform: translateY(10px);
 }
 
-.nav-toggler.active .l1{
+.nav-toggler.active .l1 {
   transform: translateY(0px) rotate(135deg);
 }
-.nav-toggler.active .l2{
+.nav-toggler.active .l2 {
   opacity: 0;
 }
-.nav-toggler.active .l3{
+.nav-toggler.active .l3 {
   transform: translateY(0px) rotate(-135deg);
 }
-
 
 .nav-bar-mobil {
   background-color: rgba(0, 0, 0, 0.5);
@@ -160,13 +156,12 @@ nav {
   text-transform: uppercase;
   position: fixed;
   transform: translateY(-120%);
-  transition : transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 /* cubic-bezier(0.73, 0.11, 0.67, 0.84) */
-.nav-bar-mobil.active{
-  transform : translateY(-26%);
+.nav-bar-mobil.active {
+  transform: translateY(-26%);
 }
-
 
 ul li {
   margin: 20px;
@@ -185,6 +180,11 @@ h1 {
   display: flex;
   justify-content: center;
   text-align: center;
+  transition : opacity 0.3s ease-in-out
+}
+
+.hide-title{
+  opacity: 0%;
 }
 
 .title-background {
