--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ img {
   align-items: center;
   width: 90px;
   height: 30px;
+  z-index : 5;
   border-radius: 30px;
   cursor: pointer;
 }
@@ -94,7 +95,7 @@ img {
 }
 
 nav {
-  margin: 20px 0;
+  margin: 20px 10px;
 }
 
 
@@ -103,7 +104,7 @@ nav {
   top: 30px;
   right: 50px;
   height: 50px;
-  z-index: 2;
+  z-index: 4;
   display: block;
   justify-content: center;
   align-items: center;
@@ -142,7 +143,7 @@ nav {
 .nav-bar-mobil {
   background-color: rgba(0, 0, 0, 0.5);
   width: 100vw;
-  min-height: 70vh;
+  min-height: 60vh;
   text-align: center;
   display: flex;
   z-index: 3;
@@ -152,12 +153,12 @@ nav {
   font-size: 20px;
   text-transform: uppercase;
   position: fixed;
-  transform: translateY(-120%);
+  transform: translateY(-118%);
   transition: transform 0.3s ease-in-out;
 }
 /* cubic-bezier(0.73, 0.11, 0.67, 0.84) */
 .nav-bar-mobil.active {
-  transform: translateY(-26%);
+  transform: translateY(-18%);
 }
 
 ul li {
