--- a/style.css
+++ b/style.css
@@ -95,14 +95,14 @@ img {
 }
 
 nav {
-  margin: 20px 10px;
+  margin: 0 10px;
 }
 
 
 .nav-toggler {
   position: fixed;
-  top: 30px;
-  right: 50px;
+  top: 10px;
+  right: 30px;
   height: 50px;
   z-index: 4;
   display: block;
