--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ header {
   background-image: url(assets/accueil.jpeg);
   background-size: cover;
   padding-top: 20px;
+  width: 100%;
   height: 60vh;
 }
 
@@ -178,7 +179,7 @@ h1 {
   display: flex;
   justify-content: center;
   text-align: center;
-  transition : opacity 0.3s ease-in-out
+  transition : opacity 0.3s ease-in-out;
 }
 
 .hide-title{
