--- a/style.css
+++ b/style.css
@@ -96,13 +96,13 @@ img {
 }
 
 nav {
-  margin: 0 10px;
+  margin: 1% 10px;
 }
 
 
 .nav-toggler {
   position: fixed;
-  top: 10px;
+  top: 15px;
   right: 30px;
   height: 50px;
   z-index: 4;
@@ -144,8 +144,9 @@ nav {
 .nav-bar-mobil {
   background-color: rgba(0, 0, 0, 0.5);
   width: 100vw;
-  min-height: 60vh;
+  height: 60vh;
   text-align: center;
+  top : 0;
   display: flex;
   z-index: 3;
   flex-direction: column;
@@ -154,12 +155,12 @@ nav {
   font-size: 20px;
   text-transform: uppercase;
   position: fixed;
-  transform: translateY(-118%);
+  transform: translateY(-100%);
   transition: transform 0.3s ease-in-out;
 }
 /* cubic-bezier(0.73, 0.11, 0.67, 0.84) */
 .nav-bar-mobil.active {
-  transform: translateY(-10%);
+  transform: translateY(0);
 }
 
 ul li {
@@ -171,6 +172,7 @@ ul li a {
 }
 
 h1 {
+  margin-top : 30%;
   color: white;
   border-radius: 20px;
   font-size: 50px;
