--- a/style.css
+++ b/style.css
@@ -280,12 +280,19 @@ h2 {
   border-radius: 30px;
 }
 
+.fa-mountain-sun,
+.fa-snowflake{
+  margin-left: 10%;
+}
+
 .first-container div img,
 .second-container div img {
   border-radius: 20px;
   width: 75%;
   height: 30vh;
 }
+
+
 
 /*********************************************Infos utiles***********************************/
 
