--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ header {
   width: 100%;
   height: 60vh;
 }
+header img{
+  display: none;
+}
 
 img {
   margin-top: 10%;
@@ -430,16 +433,13 @@ h3 {
   height: 40vh;
 }
 
-
-
-
 /************************mediaqueries**************************************************/
 
-@media  screen and (min-width : 1440px) {
-  .nav-toggler{
+@media screen and (min-width: 1440px) {
+  .nav-toggler {
     display: none;
   }
-  .nav-bar-mobil{
+  .nav-bar-mobil {
     position: static;
     transform: none;
     flex-direction: row;
@@ -447,43 +447,58 @@ h3 {
     align-items: center;
     height: 8vh;
     width: 80vw;
-    background-color: rgba(97,172,207,0.7);
+    background-color: rgba(97, 172, 207, 0.7);
     border-radius: 10px 0 0 10px;
   }
-  a{
+  a {
     padding: 18px;
   }
-  a:hover{
+  a:hover {
     background-color: var(--bg-color);
     color: var(--title1);
     border-radius: 7px;
     transition: 0.3s;
   }
-  header{
+  header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
   }
-  h1{
+  h1 {
     color: black;
     margin: 0;
     width: 100%;
     font-size: 80px;
+    text-shadow: 1px 1px 0 white;
   }
 
-
-  footer{
-  display : flex;
-  justify-content : space-between;
-  align-items: center;
+  footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-footer div{
-  justify-content : center;
-  align-items : center;
-  width: 80vw;
+  footer div {
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+  }
+  .icone {
+    display: flex;
+    justify-content: space-around;
+  }
+  header{
+    background: none;
+    padding: 0;
+    /* background-size: contain; */
+    /* background-repeat: no-repeat; */
+    /* width : 100vw; */
 }
-.icone{
-  display: flex;
-  justify-content: space-around;
+header img{
+  display: initial;
+  position: absolute;
+  z-index: -2;
+  width: 100%;
+  height: 70%;
+  margin : 0;
 }
 }
