--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ h3 {
     height: 8vh;
     width: 80vw;
     background-color: rgba(97, 172, 207, 0.7);
-    border-radius: 10px 0 0 10px;
+    border-radius: 0 0 0 10px;
   }
   a {
     padding: 18px;
@@ -472,16 +472,21 @@ h3 {
     position: absolute;
     z-index: -2;
     width: 100%;
-    height: 70%;
+    height: 80%;
     margin: 0;
   }
 
   h1 {
-    color: black;
+    backdrop-filter: blur(10px) contrast(150%);
+    color: whitesmoke;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    border-radius: 0;
+    align-items: center;
     margin: 0;
     width: 100%;
+    height : 15vh;
     font-size: 80px;
-    text-shadow: 1px 1px 0 white;
   }
 
   .first-container div img,
