--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ img {
 .fa-sun {
   opacity: 0%;
   position: absolute;
-  margin-left: 12px;
+  margin-left: 10px;
 }
 
 .fa-sun-change {
@@ -431,6 +431,17 @@ h3 {
   border-radius: 20px;
   width: 75%;
   height: 40vh;
+}
+
+.transport p {
+  margin: 5% 5% 0 5%;
+  display: flex;
+  flex-direction: column;
+}
+
+.transport-icone i {
+  color: white;
+  margin-bottom: 30px;
 }
 
 /************************mediaqueries**************************************************/
