--- a/style.css
+++ b/style.css
@@ -458,6 +458,7 @@ h3 {
   .nav-toggler {
     display: none;
   }
+  
   .nav-bar-mobil {
     position: static;
     transform: none;
@@ -485,7 +486,18 @@ h3 {
     background: none;
     padding: 0;
   }
-
+  .nav-bar-mobil li a{
+    animation-name: navbar-appear;
+    animation-duration: 3s;
+  }
+  @keyframes navbar-appear{
+    from{
+      opacity: 0;
+    }
+    to {
+      opacity: 100%;
+    }
+  }
   header img {
     display: initial;
     position: absolute;
