add javascript transition on the body

--- a/style.css
+++ b/style.css
@@ -518,6 +518,7 @@ h3 {
     height: 15vh;
     font-size: 80px;
     transition: var(--dark-mode);
+    /* test */
   }
   .h1-change {
     backdrop-filter: blur(10px) contrast(150%) brightness(20%);
