--- a/style.css
+++ b/style.css
@@ -573,7 +573,6 @@ h3 {
 }
 
   .first-container div img,
-  .contain-first-info div img,
   .main-alentours div img,
   .container-alentours img,
   .second-container div img {
@@ -609,6 +608,37 @@ h3 {
     margin-top: 15%;
   }
 
+
+
+  .contain-first-info{
+    flex-direction: row;
+    justify-content: space-between;
+    /* margin: 10px 0; */
+    margin-top: 20%;
+  }
+  
+  .contain-first-info div{
+    width: 30%;
+    margin : 0 10px 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .contain-first-info .img-shadow{
+    margin: 0;
+  }
+  
+  .contain-first-info .paragraphe-hidden{
+    margin-top : 14px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+  }
+  
   .transport p {
     margin: 5% 5% 0 5%;
     display: flex;
