--- a/caroutest/caroutest.css
+++ b/caroutest/caroutest.css
@@ -10,6 +10,101 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap");
 @import url("https://css.gg/css?=|facebook");
 
+.slider {
+  width: 800px;
+  height: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.slides {
+  width: 500%;
+  height: 500px;
+  display: flex;
+}
+.slides input {
+  display: none;
+}
+.slide {
+  width: 20%;
+  transition: 2s;
+}
+.slide img {
+  width: 800px;
+  height: 500px;
+}
+
+/* css for manual slide */
+.navigation-manual {
+  position: absolute;
+  width: 800px;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  border: 2px solid #40d3dc;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 40px;
+}
+
+.manual-btn:hover {
+  background-color: #40d3dc;
+}
+
+#radio1:checked ~ .first {
+  margin-left: 0;
+}
+#radio2:checked ~ .first {
+  margin-left: -20%;
+}
+#radio3:checked ~ .first {
+  margin-left: -40%;
+}
+#radio4:checked ~ .first {
+  margin-left: -60%;
+}
+
+/* css for auto slide */
+.navigation-auto {
+  position: absolute;
+  display: flex;
+  width: 800px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.navigation-auto div:not(:last-child) {
+  margin-right: 40px;
+}
+
+.navigation-auto div {
+  border: 2px solid #40d3dc;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+  background-color: #40d3dc;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+  background-color: #40d3dc;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+  background-color: #40d3dc;
+}
+#radio4:checked ~ .navigation-auto .auto-btn4 {
+  background-color: #40d3dc;
+}
+
 :root {
   /* Color */
   --bg-color: #f1f1f1;
@@ -49,29 +144,26 @@ img {
   height: auto;
 }
 
-.carousel{
-white-space: nowrap;
-overflow: hidden;
+.carousel {
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-.car1{
-    transition : transform 2s ease;
+.car1 {
+  transition: transform 2s ease;
 }
-.car2{
-    transition : transform 2s ease;
-    transform : translateX(100%);
+.car2 {
+  transition: transform 2s ease;
+  transform: translateX(100%);
 }
-.car3{
-    transition : transform 2s ease;
-    transform : translateX(200%);
+.car3 {
+  transition: transform 2s ease;
+  transform: translateX(200%);
 }
-.car4{
-    transition : transform 2s ease;
-    transform : translateX(300%);
+.car4 {
+  transition: transform 2s ease;
+  transform: translateX(300%);
 }
-
-
-
 
 .dark-mode {
   background-color: black;
