--- a/style.css
+++ b/style.css
@@ -546,7 +546,9 @@ h3 {
   margin-bottom: 30px;
 }
 
-/************************mediaqueries**************************************************/
+/**************************************************************mediaqueries**************************************************/
+/**************************************************************mediaqueries**************************************************/
+/**************************************************************mediaqueries**************************************************/
 
 @media screen and (min-width: 1000px) {
   /* font-size */
@@ -732,7 +734,9 @@ h3 {
   h2 {
     margin: 0 10%;
   }
-
+  .flex-container div img{
+    width : 60%;
+  }
   .choice{
     display: flex;
   }
