--- a/style.css
+++ b/style.css
@@ -771,7 +771,8 @@ h3 {
 #ete,
 #hiver{
   width : 250px;
-  height : auto;
+  height : 80px;
+  margin: 5% 0 3% 0;
 }
   
 .desktop-img p{
@@ -796,6 +797,7 @@ h3 {
     display : flex;
     flex-direction: column;
     width : 80%;
+    padding-bottom: 2%;
   }
 
   .mobil-picture{
